TP3_brost/c_grav/solution1/csim/report/c_grav_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../c_grav_tb.cpp in debug mode
   Compiling ../../../c_grav.cpp in debug mode
csim.mk:81: recipe for target 'obj/c_grav.o' failed
In file included from D:/Xillinx/Vivado/2019.2/include/floating_point_v7_0_bitacc_cmodel.h:143:0,
                 from D:/Xillinx/Vivado/2019.2/include/hls_fpo.h:186,
                 from D:/Xillinx/Vivado/2019.2/include/hls_half.h:44,
                 from D:/Xillinx/Vivado/2019.2/include/etc/ap_private.h:90,
                 from D:/Xillinx/Vivado/2019.2/include/ap_common.h:641,
                 from D:/Xillinx/Vivado/2019.2/include/ap_int.h:54,
                 from ../../../c_grav_tb.cpp:1:
D:/Xillinx/Vivado/2019.2/include/gmp.h:62:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from D:/Xillinx/Vivado/2019.2/include/hls_fpo.h:186:0,
                 from D:/Xillinx/Vivado/2019.2/include/hls_half.h:44,
                 from D:/Xillinx/Vivado/2019.2/include/etc/ap_private.h:90,
                 from D:/Xillinx/Vivado/2019.2/include/ap_common.h:641,
                 from D:/Xillinx/Vivado/2019.2/include/ap_int.h:54,
                 from ../../../c_grav_tb.cpp:1:
D:/Xillinx/Vivado/2019.2/include/floating_point_v7_0_bitacc_cmodel.h:135:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
In file included from D:/Xillinx/Vivado/2019.2/include/floating_point_v7_0_bitacc_cmodel.h:143:0,
                 from D:/Xillinx/Vivado/2019.2/include/hls_fpo.h:186,
                 from D:/Xillinx/Vivado/2019.2/include/hls_half.h:44,
                 from D:/Xillinx/Vivado/2019.2/include/etc/ap_private.h:90,
                 from D:/Xillinx/Vivado/2019.2/include/ap_common.h:641,
                 from D:/Xillinx/Vivado/2019.2/include/ap_int.h:54,
                 from ../../../c_grav.cpp:1:
D:/Xillinx/Vivado/2019.2/include/gmp.h:62:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from D:/Xillinx/Vivado/2019.2/include/hls_fpo.h:186:0,
                 from D:/Xillinx/Vivado/2019.2/include/hls_half.h:44,
                 from D:/Xillinx/Vivado/2019.2/include/etc/ap_private.h:90,
                 from D:/Xillinx/Vivado/2019.2/include/ap_common.h:641,
                 from D:/Xillinx/Vivado/2019.2/include/ap_int.h:54,
                 from ../../../c_grav.cpp:1:
D:/Xillinx/Vivado/2019.2/include/floating_point_v7_0_bitacc_cmodel.h:135:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../c_grav.cpp: In function 'void c_grav(AXI_STREAM&, AXI_STREAM&, int, int, int*, int*)':
../../../c_grav.cpp:39:20: error: invalid conversion from 'int' to 'int*' [-fpermissive]
              x_out=i;
                    ^
../../../c_grav.cpp:40:20: error: invalid conversion from 'int' to 'int*' [-fpermissive]
              y_out=j;
                    ^
make: *** [obj/c_grav.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
